# lixiv-backend

./: Cargo.toml  README.md  openapi-specification.yaml
migrations/: 0001_schemas.down.sql  0001_schemas.up.sql  0002_nodes.down.sql  0002_nodes.up.sql  0003_edges.down.sql  0003_edges.up.sql
src/: database.rs  datastructure_test.rs  graphql.rs  lib.rs  main.rs  model.rs  prelude.rs
src/graphql/: edge.rs  node.rs  schema.rs
