[package]
name = "lixiv-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-graphql = { version = "7.0.17", features = ["log"] }
async-graphql-axum = "7.0.17"
axum = { version = "0.8.7", features = ["tracing"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
http = "1.4.0"
hyper = "1.8.1"
jsonschema = "0.34.0"
petgraph = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
